Colaboratory를 통해 생성됨

--- a/Density_based_Clustering_.ipynb
+++ b/Density_based_Clustering_.ipynb
@@ -6,7 +6,7 @@
       "name": "Density-based-Clustering_.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNcxjpuVG9PpjFO9pO+Ovta",
+      "authorship_tag": "ABX9TyMnflsfApuV8/JiS1KjsYWm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g9_4vXN8nPDf",
-        "outputId": "c42ee4ab-5db1-4438-f1e5-933c4b0c47de"
+        "outputId": "ae876cde-606e-435b-d168-91f7921bd64f"
       },
       "execution_count": 1,
       "outputs": [
@@ -70,16 +70,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-01-05 10:13:20--  https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/weather-stations20140101-20141231.csv\n",
+            "--2022-01-05 19:55:21--  https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/weather-stations20140101-20141231.csv\n",
             "Resolving s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)... 67.228.254.196\n",
             "Connecting to s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)|67.228.254.196|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 129821 (127K) [text/csv]\n",
             "Saving to: ‘weather-stations20140101-20141231.csv’\n",
             "\n",
-            "weather-stations201 100%[===================>] 126.78K  --.-KB/s    in 0.05s   \n",
+            "weather-stations201 100%[===================>] 126.78K  --.-KB/s    in 0.005s  \n",
             "\n",
-            "2022-01-05 10:13:21 (2.60 MB/s) - ‘weather-stations20140101-20141231.csv’ saved [129821/129821]\n",
+            "2022-01-05 19:55:21 (25.8 MB/s) - ‘weather-stations20140101-20141231.csv’ saved [129821/129821]\n",
             "\n"
           ]
         }
@@ -104,7 +104,7 @@
           "height": 206
         },
         "id": "Qbfd4IqrnVJM",
-        "outputId": "e15a13f2-112c-4fa4-dd9e-f673bd4da4ac"
+        "outputId": "ac712cd4-5249-4963-b9b5-998c354f0b45"
       },
       "execution_count": 2,
       "outputs": [
@@ -113,7 +113,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-2751e69d-b1a2-4a16-98fc-44a85a3e4209\">\n",
+              "  <div id=\"df-56fb4932-6464-48c9-97f0-de5ad3ca2f84\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -304,7 +304,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2751e69d-b1a2-4a16-98fc-44a85a3e4209')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56fb4932-6464-48c9-97f0-de5ad3ca2f84')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -355,12 +355,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2751e69d-b1a2-4a16-98fc-44a85a3e4209 button.colab-df-convert');\n",
+              "          document.querySelector('#df-56fb4932-6464-48c9-97f0-de5ad3ca2f84 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2751e69d-b1a2-4a16-98fc-44a85a3e4209');\n",
+              "          const element = document.querySelector('#df-56fb4932-6464-48c9-97f0-de5ad3ca2f84');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -411,7 +411,7 @@
           "height": 143
         },
         "id": "tpuWilB7nsn8",
-        "outputId": "bc3b6208-c0ff-4aa4-d42a-180215644e56"
+        "outputId": "5e0226f3-4449-4a2a-87f9-3816da4f0558"
       },
       "execution_count": 3,
       "outputs": [
@@ -420,7 +420,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-54d49b0b-67fc-4309-944c-2462fc849e20\">\n",
+              "  <div id=\"df-615bcdcc-23f8-4c83-9e82-53c3a724aef9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -555,7 +555,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-54d49b0b-67fc-4309-944c-2462fc849e20')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-615bcdcc-23f8-4c83-9e82-53c3a724aef9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -606,12 +606,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-54d49b0b-67fc-4309-944c-2462fc849e20 button.colab-df-convert');\n",
+              "          document.querySelector('#df-615bcdcc-23f8-4c83-9e82-53c3a724aef9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-54d49b0b-67fc-4309-944c-2462fc849e20');\n",
+              "          const element = document.querySelector('#df-615bcdcc-23f8-4c83-9e82-53c3a724aef9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -653,10 +653,11 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 605
         },
         "id": "sA_A4VphseY9",
-        "outputId": "dcd0a2fc-545e-42c8-9578-e088a57cbe6f"
+        "outputId": "b3b068b6-9469-4c68-cb95-bcfbee80a138"
       },
       "execution_count": 4,
       "outputs": [
@@ -664,18 +665,47 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: basemap in /usr/local/lib/python3.7/dist-packages (1.3.0)\n",
-            "Requirement already satisfied: pyshp<2.2,>=1.2 in /usr/local/lib/python3.7/dist-packages (from basemap) (2.1.3)\n",
-            "Requirement already satisfied: pyproj<3.4.0,>=1.9.3 in /usr/local/lib/python3.7/dist-packages (from basemap) (1.9.6)\n",
-            "Requirement already satisfied: basemap-data<1.4,>=1.3 in /usr/local/lib/python3.7/dist-packages (from basemap) (1.3.0)\n",
+            "Collecting basemap\n",
+            "  Downloading basemap-1.3.0-cp37-cp37m-manylinux1_x86_64.whl (858 kB)\n",
+            "\u001b[K     |████████████████████████████████| 858 kB 31.7 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: matplotlib<3.5,>=1.5 in /usr/local/lib/python3.7/dist-packages (from basemap) (3.2.2)\n",
             "Requirement already satisfied: six<1.16,>=1.10 in /usr/local/lib/python3.7/dist-packages (from basemap) (1.15.0)\n",
-            "Requirement already satisfied: numpy<1.22,>=1.16 in /usr/local/lib/python3.7/dist-packages (from basemap) (1.19.5)\n",
-            "Requirement already satisfied: matplotlib<3.5,>=1.5 in /usr/local/lib/python3.7/dist-packages (from basemap) (3.2.2)\n",
+            "Collecting pyshp<2.2,>=1.2\n",
+            "  Downloading pyshp-2.1.3.tar.gz (219 kB)\n",
+            "\u001b[K     |████████████████████████████████| 219 kB 59.0 MB/s \n",
+            "\u001b[?25hCollecting basemap-data<1.4,>=1.3\n",
+            "  Downloading basemap_data-1.3.0-py2.py3-none-any.whl (30.5 MB)\n",
+            "\u001b[K     |████████████████████████████████| 30.5 MB 1.6 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy<1.22,>=1.16 in /usr/local/lib/python3.7/dist-packages (from basemap) (1.19.5)\n",
+            "Collecting pyproj<3.4.0,>=1.9.3\n",
+            "  Downloading pyproj-3.2.1-cp37-cp37m-manylinux2010_x86_64.whl (6.3 MB)\n",
+            "\u001b[K     |████████████████████████████████| 6.3 MB 54.6 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib<3.5,>=1.5->basemap) (1.3.2)\n",
             "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib<3.5,>=1.5->basemap) (2.8.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib<3.5,>=1.5->basemap) (1.3.2)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib<3.5,>=1.5->basemap) (0.11.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib<3.5,>=1.5->basemap) (3.0.6)\n"
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib<3.5,>=1.5->basemap) (3.0.6)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from pyproj<3.4.0,>=1.9.3->basemap) (2021.10.8)\n",
+            "Building wheels for collected packages: pyshp\n",
+            "  Building wheel for pyshp (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyshp: filename=pyshp-2.1.3-py3-none-any.whl size=37325 sha256=a0937d0e16bf264a577a196efdc472a95d4a5bccc364d0870ae5d1337f9ee01c\n",
+            "  Stored in directory: /root/.cache/pip/wheels/43/f8/87/53c8cd41545ba20e536ea29a8fcb5431b5f477ca50d5dffbbe\n",
+            "Successfully built pyshp\n",
+            "Installing collected packages: pyshp, pyproj, basemap-data, basemap\n",
+            "Successfully installed basemap-1.3.0 basemap-data-1.3.0 pyproj-3.2.1 pyshp-2.1.3\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "mpl_toolkits"
+                ]
+              }
+            }
+          },
+          "metadata": {}
         }
       ]
     },
@@ -745,9 +775,9 @@
           "height": 404
         },
         "id": "IukaOB3auhj8",
-        "outputId": "89f10a63-6d66-42e9-f601-33fd14c0eb60"
+        "outputId": "2c5b6b6d-d055-4daa-852c-fd14faa22e3f"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -803,16 +833,16 @@
           "height": 206
         },
         "id": "1OUrtVamvfLM",
-        "outputId": "1acf7d93-2a41-4ed4-b8c1-c3d69a8a1b82"
+        "outputId": "11f10c69-b53f-4107-b339-ca01a24e4dbf"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-01f19451-c8d1-4f35-9654-461852e87c0b\">\n",
+              "  <div id=\"df-b92a9613-6541-4370-88a7-e26129f0ce9c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -877,7 +907,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-01f19451-c8d1-4f35-9654-461852e87c0b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b92a9613-6541-4370-88a7-e26129f0ce9c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -928,12 +958,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-01f19451-c8d1-4f35-9654-461852e87c0b button.colab-df-convert');\n",
+              "          document.querySelector('#df-b92a9613-6541-4370-88a7-e26129f0ce9c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-01f19451-c8d1-4f35-9654-461852e87c0b');\n",
+              "          const element = document.querySelector('#df-b92a9613-6541-4370-88a7-e26129f0ce9c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -964,7 +994,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 7
         }
       ]
     },
@@ -1021,9 +1051,9 @@
           "height": 496
         },
         "id": "eATB1P80zQbw",
-        "outputId": "1ab75e13-3926-4b1f-88fa-72b4a01706be"
+        "outputId": "2226072c-d879-470f-b1ea-3f82ebe0e588"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1090,16 +1120,16 @@
           "height": 206
         },
         "id": "7_pB3Sg2zwyS",
-        "outputId": "01bf0907-3cd8-4db6-de96-f9c9c1fca3a0"
+        "outputId": "3d2f198b-78fd-4a6c-8d78-79c66d552c11"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-a772ea68-314a-4425-8048-f93c7486b5a0\">\n",
+              "  <div id=\"df-423d3d16-3589-4ee2-ad0d-1273d06d3ab2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1164,7 +1194,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a772ea68-314a-4425-8048-f93c7486b5a0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-423d3d16-3589-4ee2-ad0d-1273d06d3ab2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1215,12 +1245,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a772ea68-314a-4425-8048-f93c7486b5a0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-423d3d16-3589-4ee2-ad0d-1273d06d3ab2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a772ea68-314a-4425-8048-f93c7486b5a0');\n",
+              "          const element = document.querySelector('#df-423d3d16-3589-4ee2-ad0d-1273d06d3ab2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1251,7 +1281,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 9
         }
       ]
     },
@@ -1278,7 +1308,7 @@
         "            llcrnrlon=llon, llcrnrlat=llat, #min longitude (llcrnrlon) and latitude (llcrnrlat)\n",
         "            urcrnrlon=ulon, urcrnrlat=ulat) #max longitude (urcrnrlon) and latitude (urcrnrlat)\n",
         "\n",
-        "my_map.drawcoastlines()\n",
+        "my_map.drawcoastlines()  # draw coastlines\n",
         "my_map.drawcountries()\n",
         "#my_map.drawmapboundary()\n",
         "my_map.fillcontinents(color = 'white', alpha = 0.3)\n",
@@ -1306,9 +1336,9 @@
           "height": 569
         },
         "id": "NJxPOay-0j17",
-        "outputId": "b8571ba0-bf99-42bc-9416-c054634e73a4"
+        "outputId": "1ffe46bb-3fa0-4369-c549-9b0526621e71"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1336,6 +1366,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**matplotlib basemap toolkit**\n",
+        "https://matplotlib.org/basemap/api/basemap_api.html\n",
+        "\n",
+        "**Choosing Colormaps in Matplotlib**\n",
+        "https://matplotlib.org/stable/tutorials/colors/colormaps.html\n"
+      ],
+      "metadata": {
+        "id": "qFEF2SgVxTeY"
+      }
     }
   ]
 }
